# DCS-Data-Viewer

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN_EXCEL_EXPORT.md  README.md  config.py  dcs_data_viewer.spec  main.py  pyproject.toml  requirements.txt  test_data.xlsx
assets/: README.md
data/: data_manager.py  data_validator.py  export_manager.py
plotting/: plot_manager.py
scripts/: csv_to_excel.py  generate_quick_test.py  generate_sample_csv.py  generate_test_data.py  test_append_duplicate.py  test_append_no_duplicate.py  test_duplicate_detection.py
ui/: main_window.py
ui/widgets/: control_panel.py  customize_chart_dialog.py  data_quality_dialog.py  duplicate_warning_dialog.py  export_dialog.py  help_dialog.py  placeholder_widget.py  tag_list.py  tag_list_item.py
utils/: data_cleaner.py  helpers.py
